# epub2pdf

./: .coverage 2  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: ai_contribution.yml  bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  OPEN_SOURCE_SETUP.md  PRODUCT_PLAN.md  troubleshooting.md
docs/architecture/: extraction-contract.md  mcp-integration.md  overview.md  plugin-ecosystem.md  renderer-contract.md  sidecar-schema.md
docs/community/: discussions.md  launch-post.md  operation.md  releases.md  triage.md
docs/development/: setup.md
examples/: batch_convert.sh  custom_extractor_plugin.py  custom_renderer_plugin.py
integrations/codex/epub2pdf/: SKILL.md
integrations/codex/epub2pdf/agents/: openai.yaml
integrations/opencode/epub2pdf/: SKILL.md
scripts/: benchmark.py  install_agent_skills.py  real_world_benchmark.py  setup_labels.py
src/epub2pdf_cli/: __init__.py  __main__.py  api.py  cli.py  config.py  epub_reader.py  errors.py  html_builder.py  io_utils.py  jsonl.py  markdown.py  mcp_server.py  models.py  pdf_checks.py  service.py
src/epub2pdf_cli/engines/: __init__.py  playwright_engine.py  weasyprint_engine.py
src/epub2pdf_cli/epub/: __init__.py  chapters.py  container.py  href.py  opf.py  parser.py  toc.py
src/epub2pdf_cli/html/: __init__.py  builder.py  css.py  links.py  template.py
src/epub2pdf_cli/pdf/: __init__.py  extract.py  text.py  validate.py
src/epub2pdf_cli/pdf/extractors/: base.py  docling_extractor.py  ocr_extractor.py  (+3 more)
src/epub2pdf_cli/pipeline/: __init__.py  batch.py  convert.py  extract.py  inspect.py
src/epub2pdf_cli/render/: __init__.py  options.py  playwright.py  protocol.py  weasyprint.py
tests/: test_cli.py  test_install_agent_skills.py
tests/contract/: test_extractor_contract.py  test_renderer_contract.py  test_sidecar_schema.py  test_text_fidelity.py
tests/fixtures/: sample_epub.py
tests/integration/: test_batch.py  test_cli.py
tests/regression/: test_batch_regression.py
tests/unit/: test_api.py  test_cli.py  test_cli_commands.py  test_config.py  test_errors.py  test_jsonl.py  test_markdown.py  test_mcp_server.py  test_ocr_extractor.py  test_pipeline.py  test_tables_format.py
tests/unit/epub/: test_href.py  test_opf.py
tests/unit/html/: test_links.py
tests/unit/pdf/: test_pypdfium2_extractor.py
tests/unit/render/: test_protocol.py
